--- a/style css/style.css
+++ b/style css/style.css
@@ -93,7 +93,6 @@ nav a{
 .folower123{
     display: flex;
     justify-content: space-around;
-    /* margin: 50px 200px 0px 200px; */
     padding: 50px 200px 0px 200px;
 }
 .flower1{
@@ -105,8 +104,6 @@ nav a{
     border-radius: 300px 300px 0px 0px;
 }
 .flower3{
-    /* width: 350px;
-    height: 500px; */
     background-color: #477D1126;
     border-radius: 300px 300px 0px 0px;
 }
@@ -114,7 +111,6 @@ nav a{
     padding: 60px 50px 0px 50px;
     width: 250px;
     height: 350px;
-    align-items: center;
 }
 
 /* section_3 Section  */
@@ -139,6 +135,9 @@ nav a{
     font-size: 20px;
     font-weight: 500;
 }
+.service_img{
+    margin-bottom: 20px;
+}
         /* sectio_4  */
 .section_4{
     display: flex;
@@ -159,10 +158,9 @@ nav a{
     color: #27272799;
     margin-bottom: 24px;
 }
-/* .hot_deal_img{
-    width: 200px;
-    height: 300px;
-} */
+.off_red{
+    color: #E55473;
+}
        /* section_5  */
 
 .section_5{
