added final project

--- a/style css/style.css
+++ b/style css/style.css
@@ -2,6 +2,10 @@
     margin: 0px;
     padding: 0px;
 }
+
+                /* nav section added for bonus section purpose  */
+
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -34,7 +38,8 @@ nav a{
     color: #E55473;
 }
 
-/* Banner Section  */
+                  /* Banner Section  */
+
 
 .mainbanner{
     display: flex;
@@ -71,7 +76,9 @@ nav a{
     height: 600px;
 }
 
-/* section_1 section  */
+                    /* section_1  */
+
+
 .section_title{
     text-align: center;
     padding: 100px 0px 0px 0px;
@@ -88,7 +95,8 @@ nav a{
     margin-bottom: 30px;
 }
 
-/* section_2 section  */
+                        /* section_2   */
+
 
 .folower123{
     display: flex;
@@ -113,7 +121,8 @@ nav a{
     height: 350px;
 }
 
-/* section_3 Section  */
+                            /* section_3   */
+
 
 .section_3{
     border-radius: 8px;
@@ -138,7 +147,9 @@ nav a{
 .service_img{
     margin-bottom: 20px;
 }
-        /* sectio_4  */
+                         /* section_4  */
+
+
 .section_4{
     display: flex;
     justify-content: space-around;
@@ -170,7 +181,8 @@ nav a{
 .off_red{
     color: #E55473;
 }
-       /* section_5  */
+                          /* section_5  */
+
 
 .section_5{
     
@@ -178,7 +190,6 @@ nav a{
 .section_5_img{
     display: flex;
     justify-content: space-around;
-    /* margin: 50px 240px; */
     margin: 50px 200px 50px 200px;
 }
 .img_1{
@@ -186,7 +197,7 @@ nav a{
     width: 250px;
 }
 
-/* section_6  */
+                            /* section_6  */
 
 
 .section_6{
@@ -197,12 +208,21 @@ nav a{
     height: 350px;
     border-radius: 8px;
 }
-.your_name{
+.email{
     width: 400px;
-    height: 55px;
+    height: 54px;
     border-radius: 8px;
     background: #FFF;
 }
+::placeholder{
+    color: #27272799;
+    font-size: 16px;
+    padding: 15px;
+}
+
+                            /* footer section  */
+
+
 footer{
     background-color: black;
     height: 300px;
@@ -216,6 +236,7 @@ footer{
     line-height: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
+    color: #FFFFFFE5;
 }
 .footer_p1{
     color: rgba(255, 255, 255, 0.40);
